[gd_scene load_steps=5 format=3 uid="uid://c2itfo3ueu4yx"]

[ext_resource type="Script" path="res://CODIGOS/tela_moedas.gd" id="1_1cmhi"]
[ext_resource type="PackedScene" uid="uid://dkquur3xk04i6" path="res://CENAS/bot_menu.tscn" id="1_y2jm2"]
[ext_resource type="PackedScene" uid="uid://d55w3uodnya8" path="res://CENAS/barra_progresso.tscn" id="2_j3xjd"]

[sub_resource type="LabelSettings" id="LabelSettings_3rkq7"]
font_size = 76

[node name="tela_moedas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1cmhi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -9.0
offset_top = -10.0
offset_right = 1161.0
offset_bottom = 659.0
color = Color(0.834575, 0.233652, 0.764014, 1)

[node name="bot_menu" parent="." instance=ExtResource("1_y2jm2")]
layout_mode = 1
offset_left = 1009.0
offset_top = 18.0
offset_right = -18.0
offset_bottom = -498.0

[node name="Button_iniciar" type="Button" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 81.0
offset_right = 720.0
offset_bottom = 277.0
text = "jogar MOEDA"

[node name="Barra_progresso" parent="." instance=ExtResource("2_j3xjd")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_top = 326.0
offset_right = -376.0
offset_bottom = -188.0

[node name="Label_resultado" type="Label" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 467.0
offset_right = 815.0
offset_bottom = 602.0
text = "--resultado--"
label_settings = SubResource("LabelSettings_3rkq7")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button_iniciar" to="." method="_on_button_iniciar_pressed"]
